# api/openapi/post/post.yml
@@ -16,10 +16,10 @@ paths:
         parameters:
           - name: page
             in: path
-            description: Номер странитцы в отсортированной бд, от нового к старому.
+            description: Номер страницы в отсортированной бд, от нового к старому.
             required: true
             schema:
-              type: string
+              type: integer
         responses:
           '200':
             description: Объявления получены.
@@ -40,28 +40,6 @@ paths:
                 schema:
                   $ref: '#/components/schemas/ErrorHTTP'
   /api/post:
-    get:
-      summary: Вернуть посты авторизированного пользователя.
-      operationId: Post
-      security:
-      - bearerAuth: []
-      responses:
-        '200':
-          description: Объявление получено.
-          content:
-            application/json:
-               schema:
-                 type: array
-                 items:
-                    oneOf:
-                      - $ref: '#/components/schemas/MiniPost'
-        default:
-          description: Произошла ошибка.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorHTTP'
-  
     post:
       summary: Создать новое объявление.
       operationId: createPost
@@ -123,7 +101,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Post'
+              $ref: '#/components/schemas/CreatePost'
       responses:
         '200':
           description: Объявление успешно обновлено.
@@ -184,17 +162,23 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorHTTP'
-  /api/post/user/{id}:
+  /api/post/user/{idUser}/{page}:
     get:
       summary: Вернуть объявления по id пользователя.
       operationId: findPostByUserID
       parameters:
-        - name: id
+        - name: idUser
           in: path
           description: ID пользоввателя.
           required: true
           schema:
             type: string
+        - name: page
+          in: path
+          description: Старница.
+          required: true
+          schema:
+            type: integer
       responses:
         '200':
           description: Объявления получено.
@@ -214,74 +198,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorHTTP'
                 
-  /api/favorite/{id}:
-    post:
-      summary: Добавить объявление в избранное по id поста.
-      operationId: addFavoritePost
-      security:
-      - bearerAuth: []
-      parameters:
-        - name: id
-          in: path
-          description: ID поста.
-          required: true
-          schema:
-            type: string
-      responses:
-        '201':
-          description: Объявление добавлено.
-        default:
-          description: Произошла ошибка.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorHTTP'
-        
-    delete:
-      summary: Удалить объявление по id поста.
-      operationId: removeFavoritePost
-      security:
-      - bearerAuth: []
-      parameters:
-        - name: id
-          in: path
-          description: ID поста.
-          required: true
-          schema:
-            type: string
-      responses:
-        '204':
-          description: Объявление удалено.
-        default:
-          description: Произошла ошибка.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorHTTP'
-                
-  /api/favorite/{page}:
-    get:
-      summary: Вернуть избранное пользователя.
-      operationId: addFavoritePodst
-      security:
-      - bearerAuth: []
-      parameters:
-        - name: page
-          in: path
-          description: страница.
-          required: true
-          schema:
-            type: string
-      responses:
-        '201':
-          description: Объявление добавлено.
-        default:
-          description: Произошла ошибка.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorHTTP'
-                
+
 
 components:
   schemas:
@@ -294,7 +211,7 @@ components:
             - PostId
             - Views
             - Price
-            - ImageMassive
+            - PathImages
           properties:
             UserId:
               type: string
@@ -314,19 +231,21 @@ components:
             Price:
               type: string
               description: Цена объявления.
-            ImageMassive:
-              $ref: '#/components/schemas/ImageMassive'  
+            PathImages:
+              type: array
+              items:
+                type: string
+                description: Изображение.
   
   
     CreatePost:
       allOf:
         - required:
-            - UserId
             - Title
             - Description
             - Price
-            - Close
-            - ImageMassive
+            - Tag
+            - PathImages
           properties:
             Title:
               type: string
@@ -337,8 +256,15 @@ components:
             Price:
               type: string
               description: Цена объявления.
-            ImageMassive:
-              $ref: '#/components/schemas/ImageMassive'
+            Tag:
+              type: string
+              description: Категория.
+            PathImages:
+              type: array
+              items:
+                type: string
+                description: Изображение.
+                
               
     Post:
       allOf:
@@ -347,8 +273,10 @@ components:
             - Title
             - Description
             - Price
+            - Tag
             - Close
-            - ImageMassive
+            - Views
+            - PathImages
           properties:
             UserId:
               type: string
@@ -362,31 +290,20 @@ components:
             Views:
               type: integer
               description: Количество просмотров.
-            FavoriteAdd:
-              type: integer
-              description: Количество добавлений в избранное.
             Price:
               type: string
               description: Цена объявления.
+            Tag:
+              type: string
+              description: Категория.
             Close:
               type: boolean
               description: Закрыто ли объявление.
-            ImageMassive:
-              $ref: '#/components/schemas/ImageMassive'
-              
-              
-    ImageMassive:
-      type: array
-      items:
-        oneOf:
-          - required:
-              - Image
-            properties:
-              Image: 
+            PathImages:
+              type: array
+              items:
                 type: string
-                description: Изображение объявления.
-                
-            
+                description: Изображение.
 
     ErrorHTTP:
       required:
