# internal/post/delivery/http/v2/http.go
@@ -4,6 +4,7 @@ import (
 	"context"
 	"fmt"
 	"net/http"
+	"pkg/jwt"
 	"post/domain"
 	app "post/usecase"
 
@@ -14,7 +15,7 @@ import (
 //go:generate go run github.com/deepmap/oapi-codegen/cmd/oapi-codegen --config=../../../../../api/openapi/post/models.cfg.yml ../../../../../api/openapi/post/post.yml
 //go:generate go run github.com/deepmap/oapi-codegen/cmd/oapi-codegen --config=../../../../../api/openapi/post/server.cfg.yml ../../../../../api/openapi/post/post.yml
 
-func sendUserError(ctx echo.Context, code int, message string) error {
+func sendPostError(ctx echo.Context, code int, message string) error {
 	postErr := ErrorHTTP{
 		Code:    int32(code),
 		Message: message,
@@ -28,78 +29,168 @@ type HttpServer struct {
 	query   app.Queries
 }
 
-func (a *HttpServer) CreateUser(ctx echo.Context) error {
-	var newUser CreateUser
-	err := ctx.Bind(&newUser)
+func (a *HttpServer) CreatePost(ctx echo.Context) error {
+	var post CreatePost
+
+	err := ctx.Bind(&post)
 	if err != nil {
-		return sendUserError(ctx, http.StatusBadRequest, "Неправильный формат запроса")
+		return sendPostError(ctx, http.StatusBadRequest, "Неправильный формат запроса")
 	}
-	err = a.command.CreateUser.Handle(context.Background(), newUser.Email, newUser.Login, newUser.PhoneNumber,
-		newUser.SecondName, newUser.FirstName, newUser.Patronimic, newUser.Password,
-		newUser.PasswordCheck, newUser.Avatar)
+
+	headerAuth := ctx.Request().Header.Get("Authorization")
+	id := jwt.ClaimParse(headerAuth, "id")
+
+	uuids, err := uuid.Parse(id)
 	if err != nil {
-		return sendUserError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
 	}
-	return nil
+
+	postDTO := domain.Post{
+		UserID:     uuids,
+		Title:      post.Title,
+		Desciption: post.Description,
+		Price:      post.Price,
+		Tags:       post.Tag,
+		PathImages: post.PathImages,
+	}
+
+	err = a.command.CreatePost.Handle(context.Background(), postDTO)
+	if err != nil {
+		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+	}
+
+	return ctx.JSON(http.StatusCreated, "Ok")
 }
 
-func (a *HttpServer) UpdateUser(ctx echo.Context) error {
-	var updateUser CreateUser
-	err := ctx.Bind(&updateUser)
+func (a *HttpServer) UpdatePost(ctx echo.Context, id string) error {
+	var post CreatePost
+
+	err := ctx.Bind(&post)
 	if err != nil {
-		return sendUserError(ctx, http.StatusBadRequest, "Неправильный формат запроса")
+		return sendPostError(ctx, http.StatusBadRequest, "Неправильный формат запроса")
 	}
-	err = a.command.UpdateUser.Handle(context.Background(), uuid.New(), updateUser.Email, updateUser.Login, updateUser.PhoneNumber,
-		updateUser.SecondName, updateUser.FirstName, updateUser.Patronimic, updateUser.Password,
-		updateUser.PasswordCheck, updateUser.Avatar) // // Значения uuid из авторизации
+
+	headerAuth := ctx.Request().Header.Get("Authorization")
+	idUser := jwt.ClaimParse(headerAuth, "id")
+
+	uuidUser, err := uuid.Parse(idUser)
 	if err != nil {
-		return sendUserError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
 	}
-	return nil
+
+	uuidPost, err := uuid.Parse(id)
+	if err != nil {
+		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+	}
+
+	postDTO := domain.Post{
+		UserID:     uuidUser,
+		Title:      post.Title,
+		Desciption: post.Description,
+		Price:      post.Price,
+		Tags:       post.Tag,
+		PathImages: post.PathImages,
+	}
+
+	err = a.command.UpdatePost.Handle(context.Background(), uuidPost, postDTO)
+	if err != nil {
+		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+	}
+
+	return ctx.JSON(http.StatusCreated, "Ok")
 }
 
-func (a *HttpServer) DeleteUser(ctx echo.Context) error {
-	err := a.command.DeleteUser.Handle(context.Background(), uuid.New()) // Значения из авторизации
+func (a *HttpServer) DeletePost(ctx echo.Context, id string) error {
+	uuidPost, err := uuid.Parse(id)
 	if err != nil {
-		return sendUserError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
 	}
-	return nil
+
+	err = a.command.DeletePost.Handle(context.Background(), uuidPost)
+	if err != nil {
+		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+	}
+
+	return ctx.JSON(http.StatusCreated, "Ok")
 }
 
-func (a HttpServer) GetUser(ctx echo.Context) error {
-	var post domain.User
-	post, err := a.query.GetUser.Handle(context.Background(), uuid.New()) // Тут должен быть uuid из авторизации
+func (a *HttpServer) ClosePost(ctx echo.Context, id string) error {
+	uuidPost, err := uuid.Parse(id)
 	if err != nil {
-		return sendUserError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
 	}
-	result := GetUser{
-		ID:          post.Id.String(),
-		FirstName:   post.FullName.FirstName(),
-		SecondName:  post.FullName.SecondName(),
-		Patronimic:  post.FullName.Patronimic(),
-		PhoneNumber: post.PhoneNumber.String(),
-		Avatar:      post.Avatar.String(),
+
+	err = a.command.ClosePost.Handle(context.Background(), uuidPost)
+	if err != nil {
+		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
 	}
-	return ctx.JSON(http.StatusOK, result)
+
+	return ctx.JSON(http.StatusCreated, "Ok")
 }
 
-func (a *HttpServer) FindUserByID(ctx echo.Context, id string) error {
-	var post domain.User
-	uuid, err := uuid.Parse(id)
+func (a HttpServer) FindPostByID(ctx echo.Context, id string) error {
+	uuidPost, err := uuid.Parse(id)
 	if err != nil {
-		return sendUserError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
 	}
-	post, err = a.query.GetUser.Handle(context.Background(), uuid)
+
+	resultDTO, err := a.query.GetIdPost.Handle(context.Background(), uuidPost)
 	if err != nil {
-		return sendUserError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
 	}
-	result := GetUser{
-		ID:          post.Id.String(),
-		FirstName:   post.FullName.FirstName(),
-		SecondName:  post.FullName.SecondName(),
-		Patronimic:  post.FullName.Patronimic(),
-		PhoneNumber: post.PhoneNumber.String(),
-		Avatar:      post.Avatar.String(),
+
+	result := Post{
+		Close:       resultDTO.Close,
+		Description: resultDTO.Desciption,
+		PathImages:  resultDTO.PathImages,
+		Price:       resultDTO.Price,
+		Title:       resultDTO.Title,
+		UserId:      resultDTO.UserID.String(),
+		Views:       resultDTO.Views,
 	}
-	return ctx.JSON(http.StatusOK, result)
+
+	return ctx.JSON(http.StatusCreated, result)
+}
+
+func (a HttpServer) FindPostByUserID(ctx echo.Context, idUser string, page int) error {
+	uuidUser, err := uuid.Parse(idUser)
+	if err != nil {
+		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+	}
+
+	resultDTO, err := a.query.GetUserIdPost.Handle(context.Background(), uuidUser, page)
+	if err != nil {
+		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+	}
+
+	result := Post{
+		Close:       resultDTO.Close,
+		Description: resultDTO.Desciption,
+		PathImages:  resultDTO.PathImages,
+		Price:       resultDTO.Price,
+		Title:       resultDTO.Title,
+		UserId:      resultDTO.UserID.String(),
+		Views:       resultDTO.Views,
+	}
+
+	return ctx.JSON(http.StatusCreated, result)
+}
+
+func (a HttpServer) GetAllPost(ctx echo.Context, page int) error {
+	resultDTO, err := a.query.GetSortNewPost.Handle(context.Background(), page)
+	if err != nil {
+		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+	}
+
+	result := Post{
+		Close:       resultDTO.Close,
+		Description: resultDTO.Desciption,
+		PathImages:  resultDTO.PathImages,
+		Price:       resultDTO.Price,
+		Title:       resultDTO.Title,
+		UserId:      resultDTO.UserID.String(),
+		Views:       resultDTO.Views,
+	}
+
+	return ctx.JSON(http.StatusCreated, result)
 }
